[package]
name = "chocolatier"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
bonbon = { path = "../bonbon" }
bytes = "1.1.0"
bs58 = { git = "https://github.com/lwus/bs58-rs" }
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["cargo"] }
fern = "0.6.1"
itertools = "0.10.3"
log = "0.4.16"
mpl-token-metadata = "1.2.5"
postgres = "0.19.2"
postgres-types = { version = "0.2.3", features = ["derive"] }
prost = "0.10.0"
regex = "1.5.6"
solana-sdk = "=1.10.9"
solana-storage-bigtable = "=1.10.9"
solana-storage-proto = "=1.10.9"
solana-transaction-status = "=1.10.9"
spl-token = "3.2.0"
tokio = "1.15"
tokio-postgres = "0.7.5"

